# TradeBot

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PLANS.md
.agents/skills/tradebot-adr-review/: SKILL.md
.agents/skills/tradebot-agent-loop-control/: SKILL.md
.agents/skills/tradebot-authority-state-audit/: SKILL.md
.agents/skills/tradebot-benchmark-review/: SKILL.md
.agents/skills/tradebot-cpp-build-test/: SKILL.md
.agents/skills/tradebot-documentation-sync/: SKILL.md
.agents/skills/tradebot-execution-pipeline-validation/: SKILL.md
.agents/skills/tradebot-git-safety/: SKILL.md
.agents/skills/tradebot-git-safety/agents/: openai.yaml
.agents/skills/tradebot-handoff/: SKILL.md
.agents/skills/tradebot-integration-architecture-review/: SKILL.md
.agents/skills/tradebot-l2-orderbook-review/: SKILL.md
.agents/skills/tradebot-market-replay-validation/: SKILL.md
.agents/skills/tradebot-network-live-boundary-review/: SKILL.md
.agents/skills/tradebot-performance-review/: SKILL.md
.agents/skills/tradebot-phase-gate-audit/: SKILL.md
.agents/skills/tradebot-plan-authoring/: SKILL.md
.agents/skills/tradebot-pr-readiness-review/: SKILL.md
.agents/skills/tradebot-repo-hygiene/: SKILL.md
.agents/skills/tradebot-repo-inspection/: SKILL.md
.agents/skills/tradebot-risk-review/: SKILL.md
.githooks/: pre-push
.github/workflows/: validation.yml
docs/: ACTORS.md  ARCHITECTURE.md  BENCHMARKING.md  CONFIGURATION.md  DATA_POLICY.md  DEPENDENCY_POLICY.md  FAILURE_RECOVERY.md  GLOSSARY.md  HANDOFF.md  LIVE_TRADING_READINESS.md  PHASE22_OFFLINE_MT5_PROP_RESEARCH.md  PROJECT_STATE.md  README.md  RELEASE_POLICY.md  RESIDUAL_GAPS_BACKLOG.md  REVIEW_CHECKLIST.md  RISK_POLICY.md  ROADMAP.md  SECURITY.md  STYLE_GUIDE.md  TESTING.md  WORKFLOW.md  WORKSTREAM_ARCHITECTURE.md  WORKSTREAM_I_ADAPTER_CONTRACT.md  WORKSTREAM_I_INTEGRATION_ARCHITECTURE.md  WORKSTREAM_I_REPLAY_COMPATIBILITY_CHECKLIST.md  WORKSTREAM_I_RISK_MATRIX.md
docs/decisions/: 0000-template.md  0001-deprecate-offline-mop-mor-ss.md  0002-github-as-system-of-record.md  0003-workstream-i-integration-architecture.md  README.md
include/: AnalyticsEngine.hpp  AsyncNetworkClient.hpp  AuthManager.hpp  BrokerAdapterContracts.hpp  BrokerGateway.hpp  CsvReader.hpp  DeterministicBrokerAdapter.hpp  EventLoop.hpp  ExecutionEngine.hpp  IBrokerAdapter.hpp  IStrategy.hpp  L2OrderBook.hpp  LiveDataAdapter.hpp  LocalDataReplayAdapter.hpp  LocalMetricsExporter.hpp  LockFreeRingBuffer.hpp  MarketCandle.hpp  MeanReversionStrategy.hpp  MetricsAggregator.hpp  OrderLifecycleStore.hpp  PortfolioAllocator.hpp  PortfolioManager.hpp  RegimeDetector.hpp  RiskEngine.hpp  SmaCrossStrategy.hpp  StateSerializer.hpp  SystemConfig.hpp  TriggerOrderManager.hpp
scripts/: build.sh  configure.sh  test.sh
src/: AnalyticsEngine.cpp  AsyncNetworkClient.cpp  AuthManager.cpp  BrokerGateway.cpp  CsvReader.cpp  DeterministicBrokerAdapter.cpp  EventLoop.cpp  ExecutionEngine.cpp  L2OrderBook.cpp  LiveDataAdapter.cpp  LocalDataReplayAdapter.cpp  LocalMetricsExporter.cpp  MeanReversionStrategy.cpp  MetricsAggregator.cpp  OrderLifecycleStore.cpp  PortfolioAllocator.cpp  PortfolioManager.cpp  RegimeDetector.cpp  RiskEngine.cpp  SmaCrossStrategy.cpp  StateSerializer.cpp  TriggerOrderManager.cpp  main.cpp
src/benchmarks/: apply_bbo_microbench.cpp  phase18_burnin.cpp  throughput_bench.cpp
tests/: phase13_tests.cpp  phase15_tests.cpp  phase16_tests.cpp  phase17_tests.cpp  phase18_tests.cpp  phase22_tests.cpp
